--- a/weather-app/src/components/main.css
+++ b/weather-app/src/components/main.css
@@ -34,6 +34,7 @@ input {
   color:white;
   background-color:hsla(28, 87%, 62%, 0.5);
   box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
+  transition: 0.5s ease;
 
 }
 
