--- a/weather-app/src/components/main.css
+++ b/weather-app/src/components/main.css
@@ -5,6 +5,7 @@ body {
     
   background-repeat: no-repeat;
   font-family:Arial, Helvetica, sans-serif;
+  height: 2000px;
 }
 
 #container-wrapper {
@@ -25,6 +26,8 @@ box-shadow: 8px 3px 21px -4px rgba(255,173,96,0.75);
 
 #input-wrapper {
   padding-top: 2rem;
+  display: flex;
+    flex-direction: column;
 }
 
 input {
